--- a/package.json
+++ b/package.json
@@ -15,5 +15,12 @@
   "bugs": {
     "url": "https://github.com/nextbill-jeff/csvReadAndSave/issues"
   },
-  "homepage": "https://github.com/nextbill-jeff/csvReadAndSave#readme"
+  "homepage": "https://github.com/nextbill-jeff/csvReadAndSave#readme",
+  "dependencies": {
+    "csv-parser": "^2.1.0",
+    "event-stream": "^4.0.1",
+    "express": "^4.16.4",
+    "fs": "0.0.1-security",
+    "mongodb": "^3.1.12"
+  }
 }
